TabBar: prevent text from wrapping early (#14368)

--- a/ui/components/app/tab-bar/index.scss
+++ b/ui/components/app/tab-bar/index.scss
@@ -38,6 +38,7 @@
     &__content {
       padding: 12px 18px;
       display: flex;
+      flex: 1 1 auto;
       align-items: center;
       position: relative;
 
